@@ -1,3 +1,9 @@
+2007-01-09  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* gnome-screenshoot.c:  Register "applets-screenshooter" in
+	the icon factory so gtk_image_new_from_stock() works.  HIG
+	fixes for interactive dialog. (#394941)
+
 2007-01-07  Emmanuele Bassi  <ebassi@gnome.org>
 
 	A gnome-screenshot.c
